# IctBaden.pjsua2

./: .gitignore  IctBaden.pjsua2.nuspec  IctBaden.pjsua2.sln  IctBaden.pjsua2.sln.DotSettings  LICENSE  README.md  ReleaseNotes.md  build-linux-arm.sh  build-linux.sh  build-native.ps1  build-win.ps1  build.ps1  config_site.h  pack-nuget.ps1  pack-win.ps1  set-vs-vars.ps1
IctBaden.pjsua2.net/: IctBaden.pjsua2.net.csproj  IctBaden.pjsua2.net.csproj.DotSettings  PjsipInfo.cs
IctBaden.pjsua2.net.TestApp/: IctBaden.pjsua2.net.TestApp.csproj  Program.cs
media_ext/: Folders.txt  media_ext.cpp  media_ext.hpp  media_ext.i
packets/linux-x64/: libg7221codec.so.2  libgsmcodec.so.2  libilbccodec.so.2  libpj.so.2  libpjlib-util.so.2  libpjmedia-audiodev.so.2  libpjmedia-codec.so.2  libpjmedia-videodev.so.2  libpjmedia.so.2  libpjnath.so.2  libpjsdp.so.2  libpjsip-simple.so.2  libpjsip-ua.so.2  libpjsip.so.2  libpjsua.so.2  libresample.so.2  libspeex.so.2  libsrtp.so.2  libwebrtc.so.2  libyuv.so.2
pjsua2.linux/: CMakeLists.txt  a.out  dllmain.cpp  library.cpp  library.h  pj-media-neg.cpp  pjsua2.i  pjsua2_wrap.cpp  pjsua2_wrap.h
pjsua2.net/: PjsipInfo.cs  global.json  pjsua2.net.csproj  pjsua2.net.sln  pjsua2.net.sln.DotSettings
pjsua2.net.Test/: Program.cs  pjsua2.net.Test.csproj
pjsua2.win/: dllmain.cpp  pj-media-neg.cpp  pj-media-neg.h  pjsua2.win.rc  pjsua2.win.sln  pjsua2.win.vcxproj  pjsua2.win.vcxproj.filters  resource.h
